# CppUtil

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  ReadMe.md  lcov.info  vcpkg.json
.github/workflows/: build.yaml  ci.yaml
Array/: CMakeLists.txt
Array/src/: Array.hpp
Array/test/: ArrayTest.cpp  DynamicArrayTest.cpp  ResizableArrayTest.cpp
Async/: CMakeLists.txt
Async/src/: Async.hpp
Async/test/: AsyncTest.cpp
CatchVer/: CMakeLists.txt  CatchVer.hpp
Exception/: CMakeLists.txt
Exception/src/: Exception.hpp
FileSystem/: CMakeLists.txt
FileSystem/src/: FileSystem.cpp  FileSystem.hpp
FileSystem/test/: FileSystemTest.cpp  FileSystemTest_noCatch.cpp
Iteration/: CMakeLists.txt
Iteration/src/: Iteration.hpp
Iteration/test/: IterationTest.cpp
Map/: CMakeLists.txt
Map/src/: Map.hpp
Map/test/: MapTest.cpp
Platform/: CMakeLists.txt
Platform/src/: Platform.hpp
String/: CMakeLists.txt
String/src/: String.hpp
String/test/: StringTest.cpp
scripts/: pl.sh
